--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
