--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12"
