--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,3 +1,15 @@
 {
-  "rewrites": [{"source": "/(.*)", "destination": "./index.js"}]
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/backend/index.js"
+    }
+  ]
 }
