--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/index.js",
-      "use": "@vercel/node"
+      "src": "frontend/index.html",
+      "use": "@vercel/static"
     },
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "src": "backend/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/index.js" },
-    { "src": "/(.*)", "dest": "/frontend/index.html" }
+    {
+      "src": "/(.*)",
+      "dest": "frontend/index.html"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/index.js"
+    }
   ]
 }
