--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,3 +1,15 @@
 {
-    "rewrites": [{"source": "/(.*)", "destination": "/api"}]
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/package.json",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
+  ]
 }
