--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scroll": "^1.9.0",
@@ -40,7 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
+    "tailwindcss": "^3.2.0",
     "vite": "^5.3.4"
   }
 }
